# rust-procedural-wasm

./: Cargo.toml
src/: main.rs
